# ROKEY3_SLAM_robot_system

./: .gitignore  README.md  ocr_preprocessing.py  tb4_yolo_depth_checker.py  yolo_detection_cam.py
data_preprocessing/: CMakeLists.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/data_preprocessing/share/data_preprocessing/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/vehicle_info/share/vehicle_info/: package.dsv  (+9 more)
log/: latest_build
object_detection_module/: setup.py
object_detection_module/object_detection_module/: tb4_yolo_depth_checker_test.py  yolo_OCR_depth_checker0.py  yolo_OCR_depth_checker1 copy 2.py  yolo_OCR_depth_checker1 copy.py  yolo_OCR_depth_checker1.py  yolo_detection_cam copy.py
rokey_pjt/: setup.py
rokey_pjt/config/: waypoints_1.yaml
rokey_pjt/launch/: bfs_nav_to_pose_1.launch.py
rokey_pjt/rokey_pjt/: controller0.py  controller1.py  turtlebot4_1_nav.py
src/object_detection_module/: package.xml  setup.py
src/object_detection_module/object_detection_module/: ocr_preprocessing.py  yolo_OCR_depth_checker.py  yolo_OCR_depth_checker_original.py  yolo_detection_cam.py
src/system_controller/: package.xml  setup.py
src/system_controller/system_controller/: system_controller copy 2.py  system_controller copy_complete.py  system_controller.py  system_controller_DB.py  system_controller_original1.py
src/vehicle_alert/: CMakeLists.txt
src/vehicle_info/: CMakeLists.txt
system_controller/: setup.py
(+136 files in other folders)
